# simple-ai-app

./: .gitignore  README.md  pyproject.toml
src/: sst_douyin.py
