[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_ai_app"
version = "0.1.0"
description = "一些简易的AI应用"
requires-python = ">=3.10"
dependencies = [
    "pylint~=3.3.4",
    "openai~=1.61.1",
    "python_dotenv~=1.0.1",
    "gradio~=5.20.0",
    "funasr~=1.2.6",
    "fastapi~=0.115.11",
    "uvicorn~=0.34.0",
    "torch~=2.6.0",
    "torchaudio~=2.6.0",
    "torchvision~=0.21.0",
    "requests~=2.32.3",
    "pydantic~=2.10.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
